cursive-bootstrap/tests/ui/E-TYP/E-TYP-2409.cursive
// RUN: compile-fail
// DIAG: E-TYP-2409
// SPEC: 5.3
// DESC: Duplicate abstract state name in class

class Resource {
    @Open { }
    @Open { } //~ ERROR E-TYP-2409
    @Closed { }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
